sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value av
		for(i<-0 to getNombreValeurs()-av-2 by 1){
                                               ^