sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

	for(j<-0 to getNombreValeurs()-1 by 1){
		for(i<-0 to getNombreValeurs()-av-2 by 1){
			if(plusPetit(i+1, i)){
				echange(i+1,i);
				trie=0;
			}
			
		}
	}	
}
